# ImplicitPSF

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  HANDOFF.md  Makefile  README.md  data_generation.py  des_bulk_download.py  des_data_loader.py  des_file_discovery.py  extract_des_local.py  extract_des_stars.py  implicit_psf.py  pyproject.toml  train_psf.py  visualize_des_psf_data.py  visualize_psf.py
des_data_prep/: des_dr2_tiles.txt  download_des_data.py  extract_psf_stars.py  load_psf_stars.py
implicitpsf/: add_clean_psf_target.py  add_gibbs_cleaned.py  blend.py  contam_bridge.py  contam_em.py  contam_gibbs.py  contam_mcmc.py  contam_model.py  contam_sampler.py  contam_sized.py  data_generation.py  datasets.py  des_file_discovery.py  diagnose_artifacts.py  diagnose_blending.py  download_des_exposures.py  ee_rank.py  ensemble_ee_check.py  extract_des_stars.py  implicit_psf.py  make_scale_subset.py  mcem_clean.py  mcem_estep.py  mcem_iterate.py  mcem_la_recovery.py  mcem_sampler.py  mcem_truth_central_test.py  provenance.py  record.py  render.py  sim_psf_ee_defect.py  simulate.py  simulate_empirical.py  splits.py  test_epsf_selfconsistency.py  train_psf.py  visualize_des_psf_data.py
implicitpsf/baselines/: catalogs.py  implicit_runner.py  piff_runner.py  psfex_runner.py
implicitpsf/evaluation/: chi2.py  encircled_energy.py  gaia_split_test.py  galaxy_fit.py  galaxy_recovery.py  galaxy_recovery_real.py  moments.py  psf_size_deficit.py  report.py  (+4 more)
manifests/: real_sub8.json  sim_blended_gal_split_v1.json  sim_blended_split_v1.json  sim_chrom_split_v1.json  sim_contam_split_v1.json  sim_contam_train1000.json  sim_contam_train2000.json  sim_contam_train4000.json  sim_contamreal15_full.json  sim_contamreal15_m3856.json  sim_contamreal20_full.json  sim_contamreal20_m3856.json  sim_contamreal30_full.json  sim_contamreal40_full.json  sim_contamreal_split_v1.json  sim_contamreal_sub118.json  sim_contamreal_sub118_kimpute.json  sim_contamreal_sub16.json  sim_contamreal_sub4.json  sim_dense_sub24.json  sim_dense_sub48.json  sim_empirical_split_v1.json  sim_hdr_brighttail.json  sim_hdr_control.json  sim_kolmogorov_split_v1.json  sim_r10k_train1000.json  sim_r10k_train2000.json  sim_r10k_train4000.json  sim_real_density_split_v1.json  sim_realdens6k_nogal_split_v1.json  sim_realdens6k_split_v1.json  sim_realistic10k_split_v1.json  sim_realistic1500_split_v1.json  sim_realistic_split_v1.json  sim_realnoise_split_v1.json  sim_selaware.json  sim_split_v1.json  split_v1_sub1124.json
manuscript/: REFRAME_CHANGES.md  main.tex  make_appendix_figures.py  make_benchmark_figures.py  make_figures.py  make_validation_figures.py  references.bib
paper/: make_appendix_figures.py  make_benchmark_figures.py  make_figures.py  make_validation_figures.py  manuscript.md  ms.bib  ms.tex
results/: INDEX.jsonl  eval_chrom_color.parquet  eval_chrom_nocolor.parquet  eval_sim_v1c.parquet  eval_sim_v4_full.parquet  eval_sim_v5_full.parquet  eval_sim_v5_long.parquet  galaxy_recovery_sim.parquet  galaxy_recovery_sim_freen.parquet  galaxy_recovery_sim_frozen_eta2.parquet  ksweep_k10.parquet  ksweep_k100.parquet  ksweep_k25.parquet  ksweep_k5.parquet  ksweep_k50.parquet  pilot_val.parquet  real_test_implicit_blend_component.parquet  real_test_implicit_blend_exclude.parquet  real_test_implicit_blend_mask.parquet  real_test_implicit_real_rband_masked.parquet  real_test_implicit_real_v4_rband_masked.parquet  real_test_implicit_real_v4_rband_zerocolor_masked.parquet  real_test_implicit_real_v5_rband_masked.parquet  real_test_implicit_v1_rband.parquet  real_test_implicit_v4_rband.parquet  real_test_implicit_v4_rband_zerocolor.parquet  real_val_dress.parquet  rho_allband.parquet  rho_test_v6_blend_recompute.parquet
scripts/: assemble_morning_v2.sh  assemble_rband_comparison.sh  overnight_chromatic.sh  overnight_clean_sims.sh  overnight_final.sh  overnight_gpu_queue.sh  overnight_real.sh  overnight_sim_eval.sh  recover_and_continue.sh  validate_blend_gls.py
tests/: test_baselines.py  test_blend.py  test_datasets.py  test_evaluation.py  test_galaxy_fit.py  test_implicit_psf.py  test_render.py  test_splits.py
(+9 files in other folders)
